Added portfolio stuff

--- a/api/templates/AboutAashi.html
+++ b/api/templates/AboutAashi.html
@@ -8,7 +8,7 @@
     {% include 'navbar.html' %}
 
     <div class="hero-sec-guide">
-        <h1>Aashi Mehrotra</h1>
+        <h1 id="header">Aashi Mehrotra</h1>
         <img width="400px" src="{{ url_for('static', filename='portfolioHeader.svg') }}" alt="">
     </div>
 
